[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Home.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Elements/GameInfoBlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Elements/LargeSquareSelectButton.tscn" type="PackedScene" id=7]

[node name="Home" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
scroll_vertical_enabled = false
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 554.0
margin_bottom = 906.0
custom_constants/separation = 20
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 554.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="GameInfoBlock" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 40.0
margin_bottom = 272.0

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 292.0
margin_right = 554.0
margin_bottom = 312.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 332.0
margin_right = 554.0
margin_bottom = 906.0
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 7.0
margin_right = 547.0
margin_bottom = 574.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 540, 0 )
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 2

[node name="Characters" parent="VBoxContainer/HBoxContainer/GridContainer" instance=ExtResource( 7 )]
title = "Characters"
icon = "res://Imgs/Theme/scalable/status/avatar-default-symbolic.svg"

[node name="Games" parent="VBoxContainer/HBoxContainer/GridContainer" instance=ExtResource( 7 )]
margin_left = 290.0
margin_right = 540.0
title = "Games"
icon = "res://Imgs/icons/ScrollsAndBooks_77_t.png"

[node name="Achievements" parent="VBoxContainer/HBoxContainer/GridContainer" instance=ExtResource( 7 )]
margin_top = 307.0
margin_bottom = 574.0
title = "Achievements"
icon = "res://Imgs/icons/TrophyIcons_111_t.png"

[node name="Friends" parent="VBoxContainer/HBoxContainer/GridContainer" instance=ExtResource( 7 )]
margin_left = 290.0
margin_top = 307.0
margin_right = 540.0
margin_bottom = 574.0
title = "Friends"
icon = "res://Imgs/icons/group.png"
[connection signal="visibility_changed" from="." to="." method="_on_Home_visibility_changed"]
[connection signal="select_game" from="VBoxContainer/GameInfoBlock" to="." method="_on_GameInfoBlock_select_game"]
[connection signal="clicked" from="VBoxContainer/HBoxContainer/GridContainer/Characters" to="." method="_on_Characters_clicked"]
[connection signal="clicked" from="VBoxContainer/HBoxContainer/GridContainer/Games" to="." method="_on_Games_clicked"]
[connection signal="clicked" from="VBoxContainer/HBoxContainer/GridContainer/Achievements" to="." method="_on_Achievements_clicked"]
[connection signal="clicked" from="VBoxContainer/HBoxContainer/GridContainer/Friends" to="." method="_on_Friends_clicked"]
